refactor: address SonarQube findings